[package]
name = "movable"
version = "0.1.1"
authors = ["technolapin <clement.chomicki@protonmail.com>"]
edition = "2018"
readme="README.md"
repository="https://github.com/technolapin/movable"
license = "MIT OR Apache-2.0"
description = "A structure whose internal content can be moved out immutably."
categories=["data-structures", "memory-management"]
keywords=["move", "immutable"]

[dependencies]
